[gd_scene load_steps=2 format=2]

[ext_resource path="res://CourseSelection/CourseBtn.gd" type="Script" id=1]

[node name="CourseBtn" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -330.0
margin_bottom = -170.0
rect_min_size = Vector2( 150, 100 )
script = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_CourseBtn_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CourseBtn_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_CourseBtn_pressed"]
